# magnit-ai

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  package.json  server.cjs
magai-be/: .env.example  .gitignore  alembic.ini  pyproject.toml
magai-be/.template-project/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
magai-be/.template-project/src/: index.css
magai-be/alembic/: env.py
magai-be/alembic/versions/: 5d7bd7635b92_add_build_progress_fields_to_widgets.py  5d8a0f5e10b3_fix_user_id_type.py  bef37ed6fedf_initial_models.py  c436ec5a63f5_add_visual_language_column.py  d03a11720f6d_remove_source_code_from_widgets.py
magai-be/app/: main.py
magai-be/app/features/leads/: models.py  routes.py  schemas.py  service.py
magai-be/app/features/payments/: models.py  routes.py  schemas.py  service.py
magai-be/app/features/users/: models.py  routes.py  schemas.py  service.py
magai-be/app/features/widgets/: models.py  routes.py  schemas.py  service.py
magai-be/app/platform/: celery_app.py
magai-be/app/platform/clients/: antigravity.py  deployment.py
magai-be/app/platform/config/: settings.py
magai-be/app/platform/db/: mixins.py  session.py
magai-be/app/platform/db/models/: __init__.py  idempotency_key.py
magai-be/app/platform/errors/: handlers.py
magai-be/app/platform/http/: app.py
magai-be/app/platform/logging/: config.py  middleware.py
magai-be/app/platform/pipeline/: builder.py  engine.py  events.py  schemas.py  self_heal.py  tasks.py
magai-be/app/platform/pipeline/states/: analyzer.py  architect.py  codegen.py  deployer.py  (+1 more)
(+49 files in other folders)
