[project]
name = "magai-be"
version = "0.1.0"
description = "MagnetAI backend - Automated Lead Magnet Generator"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.42,<3.0.0",
    "alembic>=1.16.4,<2.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "google-antigravity>=0.1.0",
    "google-genai>=1.0,<1.5",
    "stripe>=11.0.0,<12.0.0",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
    "ruff>=0.12.0,<1.0.0",
    "mypy>=1.17.0,<2.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
